makefile and vscode building buffoonery

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,18 @@ kp
 TODOS
 coverage.out
 
-.vscode
 local_artifacts/
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
